--- a/inclusivePackage/.github/workflows/testing.yaml
+++ b/inclusivePackage/.github/workflows/testing.yaml
@@ -9,21 +9,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [
+            ubuntu-latest,
+            macos-latest,
+          ]
         python-version:
-          - "2.7"
-          - "3.6"
-          - "3.7"
           - "3.9"
           - "3.10"
           - "3.11"
           - "3.12"
           - "3.13"
-          - "pypy-3.7"
-          - "pypy-3.8"
           - "pypy-3.9"
+          - "pypy-3.10"
+          - "pypy-3.11"
     name: inclusive-test
-    runs-on: ${{ matrix.os}}
+    runs-on: ${{matrix.os}}
 
     steps:
       - name: Checkout code
@@ -32,10 +32,33 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-veresion }}
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
-        run: python -m pip install pytest .
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install pytest
+          pip install -e ".[test]"
 
       - name: Run inclusive-test
-        run: pytest
+        run: |
+          pytest --junitxml pytest-results.xml
+
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+  
+
+      - name: Lint with Black
+        run: |
+          pip install black
+          black --check .
+
+      - name: Lint with Ruff
+        run: |
+          pip install ruff
+          ruff check .
