--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,11 @@ blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
+streamlit==1.32.0
+pandas>=1.3.0
+plotly>=5.0.0
+numpy>=1.21.0
+matplotlib>=3.4.0
+statsmodels>=0.13.0
+scikit-learn>=1.0.0
+-e .
